# ocaml-smartschool

./: .gitignore  params_iso.ml  params_variant.ml  smartschool.opam  smartschool_soap.opam
config/: dune
lib/: agenda.ml  assoc.ml  attendance.ml  classes.ml  courses.ml  dune  ical.ml  names.ml  postboxes.ml  users.ml
private/: agenda.ml  api.ml  binary.ml  client.ml  client.mli  dune  ids.ml  maybe_one.ml  params.ml  postboxes.ml  request.ml  response.ml  whatever.ml
replay/: dune  replay.ml  replay.mli
soap/: dune  smartschool_soap.ml
tests/: agenda_query_req.ml  agenda_query_req.xml  agenda_query_resp.ml  agenda_query_resp.xml  courses.xml
toy/: obj.ml
toy/f/: dune  sync.ml  types.ml
