opam-version: "2.0"
name: "smartschool"
version: "dev"
maintainer: "Guillaume Huysmans <ghuysmans99@gmail.com>"
authors: "Guillaume Huysmans <ghuysmans99@gmail.com>"
homepage: "https://github.com/ghuysmans/ocaml-smartschool/"
bug-reports: "https://github.com/ghuysmans/ocaml-smartschool/issues"
dev-repo: "git+https://github.com/ghuysmans/ocaml-smartschool/"
build: [["dune" "build" "-p" name "-j" jobs]]
depends: [
  "dune" {>= "2.7"}
  "glical"
  "ppx_protocol_conv_xml_light"
  "ppx_protocol_conv_json"
  "uri"
]
synopsis: "Smartschool client library for OCaml"
